--- a/vintelo-ejs-main/app/public/css/finalizandopagamento.css
+++ b/vintelo-ejs-main/app/public/css/finalizandopagamento.css
@@ -10,7 +10,7 @@ body {
   color: #333;
 }
 
-/*                                                Header - Mobile First                                                 */
+/*                            cabeçalho Mobile                                  */
 header {
   background-color: #fff;
 }
