--- a/vintelo-ejs-main/app/public/css/pedidoconf.css
+++ b/vintelo-ejs-main/app/public/css/pedidoconf.css
@@ -6,7 +6,7 @@
   
   body {
     font-family: Prata, Monteserrat;
-    background-color: #f8f8f8;
+    background-color: #ffffff;
     color: #333;
   }
 
