--- a/vintelo-ejs-main/app/public/css/planos.css
+++ b/vintelo-ejs-main/app/public/css/planos.css
@@ -1,4 +1,4 @@
-/* Banner em GIF - full width */
+/*                 Banner em GIF                */
 .discount-banner {
   background-color: #92444d;
   color: white;
@@ -14,12 +14,12 @@
   margin: 20px 0p 0px;
 }
 
-/* Corrigindo o peso da fonte */
+/*          fonte            */
 .highlight {
   font-weight: bold;
 }
 
-/* Animação */
+/*           Animação           */
 @keyframes fadeIn {
   0% {
     opacity: 0.1;
@@ -43,7 +43,7 @@
     box-shadow: 0 4px 12px rgba(255, 107, 53, 0.4);
   }
 }
-/* Estilos para o cabeçalho desktop */
+/*             cabeçalho desktop               */
 .main-header {
   display: flex;
   justify-content: space-between;
@@ -107,7 +107,7 @@ body {
   text-align: center;
 }
 
-/* Cabeçalho */
+/*                 Cabeçalho                   */
 .planos-header {
   padding: 2rem 1rem;
 }
@@ -124,7 +124,7 @@ body {
   color: #000000;
 }
 
-/* Container dos planos */
+/*                    Container dos planos            */
 .planos-container {
   display: flex;
   flex-direction: column;
@@ -132,7 +132,7 @@ body {
   padding: 1rem;
 }
 
-/* Cartões de planos */
+/*                    Cartões de planos                  */
 .plano {
   background: #f5e9dd;
   color: #6d1a35;
@@ -265,7 +265,7 @@ button:active {
   transform: translateY(0);
 }
 
-/* Destaque para plano intermediário */
+/*               plano intermediário               */
 .destaque {
   border: 3px solid #6d1a35;
   transform: scale(1.05);
@@ -292,7 +292,7 @@ button:active {
   background: linear-gradient(135deg, #6d1a35, #6d1a35);
 }
 
-/* Responsividade - Desktop */
+/*                       Responsividade - Desktop                        */
 @media (min-width: 768px) {
   .planos-container {
     flex-direction: row;
@@ -360,7 +360,7 @@ button:active {
   color: #ffffffe7;
 }
 
-/*                                            Responsividade para Mobile                                              */
+/*                                 Responsividade para Mobile                                      */
 @media (max-width: 768px) {
   .planos-header {
     padding: 1.5rem 1rem;
@@ -398,7 +398,7 @@ button:active {
   }
 }
 
-/* Header Mobile */
+/*         cabeçalho Mobile              */
 .oculto-desktop {
   display: none;
 }
@@ -419,7 +419,7 @@ button:active {
   height: 40px;
 }
 
-/* Top bar */
+/*               Top bar                    */
 .top-bar {
   background: linear-gradient(135deg, #7D2838, #a64d61);
   color: white;
@@ -428,7 +428,7 @@ button:active {
   font-size: 14px;
 }
 
-/* responsividade - Mobile */
+/*        responsividade - Mobile           */
 @media (max-width: 768px) {
   .oculto-desktop {
       display: block;
