--- a/vintelo-ejs-main/app/public/css/sacola.css
+++ b/vintelo-ejs-main/app/public/css/sacola.css
@@ -10,7 +10,7 @@ body {
   background-color: #ffffff;
   color: #333;
 }
-/* Header Mobile */
+/*              cabeçalho  Mobile                       */
 .header1 {
   background-color: #fff;
 }
@@ -34,7 +34,7 @@ header img {
 header img:hover {
   transform: scale(1.1);
 }
-/* Header Desktop */
+/*                cabeçalho Desktop                */
 .top-bar {
   background-color: #7D2838;
   text-align: center;
@@ -125,7 +125,6 @@ nav a:hover {
   transform: scale(1.1);
 }
 
-/* Main Content */
 main {
   padding: 20px;
   max-width: 1200px;
@@ -235,7 +234,7 @@ main {
 }
 
 
-/* Footer */
+/*                     rodapé              */
 .footer {
   background-color: #7D2838;
   color: #fff;
@@ -288,7 +287,7 @@ main {
   text-align: center;
 }
 
-/* Visibility Controls */
+/*                Visibilidade da responsividade            */
 @media (max-width: 768px) {
   .oculto-mobile {
     display: none;
@@ -314,7 +313,7 @@ main {
 }
 
 
-/* Seção de Filtros */
+/*                   Seção de Filtros             */
 .filter-section {
   margin: 30px 0;
   text-align: center;
@@ -350,7 +349,7 @@ main {
   color: white;
 }
 
-/* estilo dos filtros */
+/*                    estilo dos filtros                   */
 .content-layout {
   display: none;
 }
@@ -395,7 +394,7 @@ main {
   accent-color: #7D2838;
 }
 
-/* responsividade de Desktop  */
+/*                     responsividade de Desktop                 */
 @media (min-width: 992px) {
   main {
     padding: 40px 20px;
